[feat] 新增會員自我介紹功能
