# routes/admin/memberManage.js
@@ -36,6 +36,7 @@ router.post(
             "nickName": "",
             "email": "admin@gmail.com",
             "avatarImgUrl": "",
+            "discription": "",
             "gender": "secret"
           }
         }
@@ -66,6 +67,7 @@ router.get(
             "nickName": "",
             "email": "admin@gmail.com",
             "avatarImgUrl": "",
+            "discription": "",
             "gender": "secret"
           }
         }
@@ -106,6 +108,7 @@ router.get(
             "nickName": "Carol",
             "gender": "secret",
             "avatarImgUrl": "https://123.png",
+            "discription": "",
             "email": "carol@mail.com",
             "role": "member",
             "createdAt": "2024-08-02T17:07:31.743Z",
@@ -146,6 +149,7 @@ router.get(
           "nickName": "Carol",
           "gender": "secret",
           "avatarImgUrl": "https://123.png",
+          "discription": "",
           "email": "carol@mail.com",
           "role": "member",
           "createdAt": "2024-08-02T17:07:31.743Z",
@@ -195,6 +199,7 @@ router.patch(
             "nickName": "Carol",
             "gender": "secret",
             "avatarImgUrl": "https://123.png",
+            "discription": "",
             "email": "carol@mail.com",
             "role": "member",
             "createdAt": "2024-08-02T17:07:31.743Z",
@@ -235,6 +240,7 @@ router.delete(
           "nickName": "Carol",
           "gender": "secret",
           "avatarImgUrl": "https://123.png",
+          "discription": "",
           "createdAt": "2024-08-02T17:07:31.743Z",
           "updatedAt": "2024-08-07T17:02:49.701Z"
         }
